# Lens24

./: .gitignore  CHANGELOG.md  LICENSE-ThirdParty.txt  LICENSE.md  README.md  build.gradle  dump_wrapper.sh  gradle.properties  jitpack.yml  settings.gradle
demo/: build.gradle  proguard-rules.pro
demo/src/main/: AndroidManifest.xml
demo/src/main/java/demo/: CardDetailsActivity.java  CardDetailsActivityKotlin.kt  IntroActivity.java
demo/src/main/res/drawable/: ic_credit_card_scan.xml  ic_lens24_logo.xml  ripple_button.xml
demo/src/main/res/drawable-v21/: ripple_button.xml
demo/src/main/res/layout/: activity_card_details.xml  activity_intro.xml
demo/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_opencv.sh  check_alignment.sh  publish-module.gradle
sdk/: build.gradle  gradle.properties  proguard-customer.pro  proguard-rules.pro
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt  CardRecognizer-jni.cpp
sdk/src/main/cpp/crossplatform/CrossPlatform/Include/Public/: Enums.h  IRecognitionCore.h  IRecognitionCoreDelegate.h
sdk/src/main/cpp/crossplatform/CrossPlatform/Include/Recognizer/: IDateRecognizer.h  IEdgesDetector.h  IFrameStorage.h  INameRecognizer.h  INumberRecognizer.h
sdk/src/main/cpp/crossplatform/CrossPlatform/Recognizer/: DateRecognizer.cpp  DateRecognizer.h  EdgesDetector.cpp  EdgesDetector.h  FrameStorage.cpp  FrameStorage.h  NameRecognizer.cpp  NameRecognizer.h  NumberRecognizer.cpp  NumberRecognizer.h  RecognitionCore.cpp  RecognitionCore.h
sdk/src/main/cpp/crossplatform/jniImpl/: RecognitionCoreDelegate.cpp  RecognitionCoreDelegate.h  TorchDelegate.cpp
sdk/src/main/res/drawable/: frame_rect_gradient.xml  ic_flash_off.xml  ic_flash_on.xml  ic_line.xml  ic_scanbox_border.xml  (+7 more)
sdk/src/main/res/drawable-v21/: lens24_ripple_background.xml
(+72 files in other folders)
